--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <script src="components/status-bar/statusBar.js"></script>
     <script src="components/event-dashboard/eventGraphDirective.js"></script>
     <script src="components/delete/deleteDirective.js"></script>
+    <script src="components/login/logoutDirective.js"></script>
 
     <!-- controllers -->
     <script src="components/article/articleController.js"></script>
