Use directive to render dashboard

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <script src="components/event-dashboard/eventGraphDirective.js"></script>
     <script src="components/delete/deleteDirective.js"></script>
     <script src="components/login/logoutDirective.js"></script>
+    <script src="components/dashboard/dashboardDirective.js"></script>
 
     <!-- controllers -->
     <script src="components/article/articleController.js"></script>
