Add loading gif

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <script src="components/user-group/userGroupService.js"></script>
     <script src="components/setting/settingService.js"></script>
     <script src="components/login/authenticationService.js"></script>
+    <script src="components/status-bar/loadingQueue.js"></script>
 
     <!-- directives -->
     <script src="components/navigation/navigation.js"></script>
