--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="bower_components/ng-ckeditor/ng-ckeditor.css" />
     <link rel="stylesheet" href="bower_components/rome/dist/rome.min.css" />
+    <link rel="stylesheet" href="bower_components/gToast/build/gToast.css" />
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -57,6 +58,7 @@
     <script src="bower_components/angular-momentjs/angular-momentjs.min.js"></script>
     <script src="bower_components/raphael/raphael-min.js"></script>
     <script src="bower_components/rome/dist/rome.standalone.min.js"></script>
+    <script src="bower_components/gToast/build/gToast.js"></script>
 
     <!-- app -->
 
