--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="bower_components/ng-ckeditor/ng-ckeditor.css" />
     <link rel="stylesheet" href="bower_components/rome/dist/rome.min.css" />
     <link rel="stylesheet" href="bower_components/gToast/build/gToast.css" />
+    <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -59,6 +60,7 @@
     <script src="bower_components/raphael/raphael-min.js"></script>
     <script src="bower_components/rome/dist/rome.standalone.min.js"></script>
     <script src="bower_components/gToast/build/gToast.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
     <!-- app -->
 
