--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
 
     <!-- Place favicon.ico in the root directory -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="build/css/main.min.css">
     <script src="bower_components/modernizr/modernizr.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bower_components/ng-ckeditor/ng-ckeditor.css" />
-    <link rel="stylesheet" href="bower_components/rome/dist/rome.min.css" />
-    <link rel="stylesheet" href="bower_components/gToast/build/gToast.css" />
-    <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -38,77 +33,12 @@
         <main ng-cloak ng-view></main>
     </div>
 
-    <!-- assets -->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
     <script>window.jQuery || document.write('<script src="bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
 
-    <!-- libraries -->
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-
-
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-route/angular-route.min.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
-
-    <script src="bower_components/ng-file-upload/ng-file-upload.min.js"></script>
-    <script src="bower_components/ng-file-upload/ng-file-upload-shim.min.js"></script>
     <script src="bower_components/ckeditor/ckeditor.js"></script>
+    <script src="build/js/app.min.js"></script>
     <script src="bower_components/ng-ckeditor/ng-ckeditor.min.js"></script>
-    <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="bower_components/angular-momentjs/angular-momentjs.min.js"></script>
-    <script src="bower_components/raphael/raphael-min.js"></script>
-    <script src="bower_components/rome/dist/rome.standalone.min.js"></script>
-    <script src="bower_components/gToast/build/gToast.js"></script>
-    <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
-    <!-- app -->
-
-    <script src="components/app.modules.js"></script>
-
-    <!-- services -->
-    <script src="components/navigation/navigationService.js"></script>
-    <script src="components/api/genericApiService.js"></script>
-    <script src="components/article/articleService.js"></script>
-    <script src="components/page/pageService.js"></script>
-    <script src="components/language/languageService.js"></script>
-    <script src="components/article-category/articleCategoryService.js"></script>
-    <script src="components/page-category/pageCategoryService.js"></script>
-    <script src="components/location/locationService.js"></script>
-    <script src="components/event/eventService.js"></script>
-    <script src="components/event-dashboard/eventGraphService.js"></script>
-    <script src="components/util/arrayService.js"></script>
-    <script src="components/util/stringService.js"></script>
-    <script src="components/logger/loggerService.js"></script>
-    <script src="components/media/fileService.js"></script>
-    <script src="components/location/mapService.js"></script>
-    <script src="components/user/userService.js"></script>
-    <script src="components/user-group/userGroupService.js"></script>
-    <script src="components/setting/settingService.js"></script>
-    <script src="components/login/authenticationService.js"></script>
-    <script src="components/status-bar/loadingQueue.js"></script>
-
-    <!-- directives -->
-    <script src="components/navigation/navigation.js"></script>
-    <script src="components/status-bar/statusBar.js"></script>
-    <script src="components/event-dashboard/eventGraphDirective.js"></script>
-    <script src="components/delete/deleteDirective.js"></script>
-    <script src="components/login/logoutDirective.js"></script>
-    <script src="components/dashboard/dashboardDirective.js"></script>
-
-    <!-- controllers -->
-    <script src="components/article/articleController.js"></script>
-    <script src="components/page/pageController.js"></script>
-    <script src="components/dashboard/dashboardController.js"></script>
-    <script src="components/event-dashboard/eventDashboardController.js"></script>
-    <script src="components/event/eventController.js"></script>
-    <script src="components/location/locationController.js"></script>
-    <script src="components/media/mediaController.js"></script>
-    <script src="components/user/userController.js"></script>
-    <script src="components/setting/settingController.js"></script>
-    <script src="components/login/loginController.js"></script>
-
-    <!-- run app -->
-    <script src="components/app.js"></script>
 </body>
 </html>
